rust_test_framework/tests/compile_tests/should_fail/teardown_missing.stderr
error[E0432]: unresolved import `teardown`
 --> tests/ui/teardown_missing.rs:3:1
  |
3 | #[test_fixture]
  | ^^^^^^^^^^^^^^^ no external crate `teardown`
  |
  = note: this error originates in the attribute macro `test_fixture` (in Nightly builds, run with -Z macro-backtrace for more info)
